Trying to fix background image that's cut off

--- a/index.css
+++ b/index.css
@@ -11,6 +11,9 @@ header{
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+  margin-bottom:10px;
+  padding-bottom:10px;
+  background-size: 100% 100%
 }
 
 h1{
